--- a/qml.qrc
+++ b/qml.qrc
@@ -4,5 +4,6 @@
         <file>resources/jdoe-mini.png</file>
         <file>resources/smssync-trayicon.png</file>
         <file>resources/smssync.png</file>
+        <file>resources/smssync-trayicon-black.png</file>
     </qresource>
 </RCC>
